syntax = "proto3";
package im.buddy;
import "im.base.proto";
option optimize_for = LITE_RUNTIME;

message AllUserReq {
    // cmd id: 0x0201
    uint32 user_id = 1;
    bytes attach_data = 20;
}

message AllUserRsp {
    // cmd id: 0x0202
    uint32 user_id = 1;
    repeated im.base.UserInfo user_info_list = 2;
    bytes attach_data = 20;
}
